--- a/index.html
+++ b/index.html
@@ -1368,43 +1368,59 @@
 									</g>
 								</g>
 								<g>
-										<g transform="translate(0 0)"><!--  남자 -->
-											<path class="st4" d="M199.5,359.4c0,0-0.1-6.6-0.1-10c0-0.6,0.7-2.9,0.7-3.1c0.3-1.9-0.1-5.2-2.8-4.3c-2.7,0.9-2.8,3.7-2.8,6
-													c0,0.4,0.7,1.6,0.7,2.2c0,3.2-0.6,8.4-0.6,8.9C194.7,359.6,199.5,359.4,199.5,359.4z"/>
-											<path class="st37" d="M162.3,459.6c0,0,1.6,2.3,1.5,2.4c-0.2,0.1-2.9,3.2-4.7,2.8c-1.8-0.4-1.7-2.2-1.7-2.2l0.8-4L162.3,459.6z
-												"/>
-											<path class="st37" d="M175.6,466.5c0,0-0.3,1.6,2.2,3c0.8,0.4-2.2,3.7-3.7,3.7c-2.1,0-3.7-0.9-3.7-1.9c-0.1-1-0.8-6.9,0.5-6.8
-												C172.1,464.6,175.2,466.2,175.6,466.5z"/>
-											<path class="st38" d="M177.4,469.2c0,0,11-1.6,11.6,0.1c0.6,1.7-2.9,4.8-5.6,5.4c-2.7,0.5-6.3,0.8-7.2,1.4
-												c-0.9,0.7-5,3.3-6,0.4v-5.4c0,0,2.8,2.4,5,1.3C177.5,471.3,177.5,470.9,177.4,469.2z"/>
-											<path class="st39" d="M183.1,406.9c0,0-0.9,27.2-1.6,30.1c-0.8,2.9-5.5,28.6-5.9,29.4c-0.4,0.8-4.5,2.2-5.5-1.1
-												c-0.9-3.2,2.7-28.2,2.7-28.2s-1.1-18.5-2.3-20.7c-1.2-2.2-2.9-2.8-2.9-0.4c0,2.5,0.7,15.5-0.1,18.2c-0.8,2.6-3.9,25.3-5.1,26
-												c-1.2,0.8-4,2.3-5.9-1.4c-2-3.7,2.5-22,2.2-27.1c-0.3-5.1-3.7-29.6-2.7-34.4C157,392.5,183.2,405.3,183.1,406.9z"/>
-											<path class="st38" d="M163.2,458.2c2-0.8,5.5-3.5,6.3-2.1c0.8,1.4,0.9,3.8-2.4,5.5c-3.3,1.7-3.5,2.5-3.9,3.6
-												c-0.4,1.1-1.9,4.2-4.3,3.3c-2.4-0.9-1.7-4.8-1.5-5.9c0,0,1.1,1.9,2.7,1.3c1.6-0.6,2.4-1,2.7-1.8c0.2-0.8-0.8-2.1-0.8-2.1
-												L163.2,458.2z"/>
-											<path class="st4" d="M184,338.5c0.9,0.4,1.3,7.2,1.2,8.7c-0.2,1.4,0.2,2.5-0.2,2.4c-0.4-0.1-0.7,0.2-0.7,0.2s0.7,6.1-0.2,6.7
-												c-0.9,0.6-6.2-0.4-7.6-0.4c-0.8,0-1.7,1.1-1.7,1.6c0,1-5.3-2.1-5.3-3c0-0.8,1.1-4.9,1.1-4.9S178.8,336.1,184,338.5z"/>
-											<path class="st40" d="M184.9,337.3c0.2-3.6-3.2-4.1-5.9-3.7c-2.6,0.5-12.2-1.2-13.5,5.9c-1.3,7.1,1,10.6,3.8,11.9
-												c1.9,0.9,6.5-1.3,6.5-3.5s2.8-2.2,3.5-1.1c0.7,1.2,2.2,3.9,2.5,1.2c0.2-2.7-1.6-7.2-0.2-8.8
-												C183.1,337.6,184.8,339.5,184.9,337.3z"/>
-											<g>
-												<path class="st41" d="M164.9,354.1c0.1,0,0.2-0.1,0.3-0.2c1.7-1.3,4.2-0.4,4.2-0.4c0.6,0.2,2.4,1.8,5.2,3.7
-													c1,0.7,2.6,1.9,4.3,3.2c-3.4-0.2-10.1-0.7-11.8-2.1C165.6,357.3,165.1,355.6,164.9,354.1z"/>
-												<path class="st42" d="M150.1,376c-2.1-1.7,7-20.5,9.4-21.8c2.2-1.2,3.9,0.5,5.4,0c0.2,1.5,0.8,3.2,2.1,4.3
-													c1.8,1.4,8.4,2,11.8,2.1c3.1,2.5,6.4,5.3,6.4,5.3s-0.2-0.2-0.5-0.6c3.8,4.1,12.2,11.6,16.3,15.3c0.1,0.2,0.1,0.3,0.1,0.4
-													c0.9,3.6-1.2,4.5-3.1,4.6c-13.7-11.1-15.8-12.6-15.8-12.6c-1.6,2-1.3,13.6-1.5,17.9c-0.2,3.3,0.7,11.4,2.5,16.1
-													c-1.5,1-3.9,2-5.9,2c-3,0-11.9-4.7-12.5-5.6c-0.5-0.9-0.2-9.9-1-9.8c-0.8,0.1-2,7.6-2,7.6s-8.2-2.7-6.2-7.4
-													c1.9-4.7,1.8-15,1.8-15S152.2,377.7,150.1,376z"/>
-												<path class="st42" d="M180.7,390.8c0.2-4.3-0.1-15.9,1.5-17.9c0,0,2.1,1.5,15.8,12.6c-0.4,0-0.9,0-1.2,0
-													c-2-0.2-13.2-10.3-13.2-10.3c-0.8,0.8-0.6,13.1-0.6,15.6c0,2.5,1.5,14.2,1.5,14.9c0,0.3-0.5,0.8-1.4,1.3
-													C181.4,402.2,180.5,394.1,180.7,390.8z"/>
-												<path class="st43" d="M194.5,365c-0.2-4.9-0.4-8.3,0-9.7c0.3-0.9,3.5-0.4,4.9-0.2c1.3,0.2,1.6,20.5,1.6,25.3
-													c-2.6-2.2-4.1-3.6-6.3-5.7C193.8,374,194.5,370.7,194.5,365z"/>
+										<g id="SvgjsG1024" transform="matrix(0.6,0,0,0.6,62,320)"><svg
+												xmlns="http://www.w3.org/2000/svg" viewBox="0 0 80 240" width="288" height="288">
+												<path
+													d="M68.8 230C86 220.3 73 213 57 205.3c-17.8-8.5-24.9-11.7-40.5-1.6-9.5 6.1-2.4 15.9 13.8 23.5 18.4 8.7 26.3 9.6 38.5 2.8z"
+													opacity=".2" fill="#000000" class="color000 svgShape"></path>
+												<path fill="#2a2626"
+													d="M16.8 213.2c0 2.1-.1 5.9 3.8 5.9s5.9-2.9 6.2-3.8c.3-1-.1-3 1.3-3.8 1.3-.8 6.3-2.5 6.6-7.1.4-4.9-1.8-5-3.5-5s-5.9.3-5.9.3l-8.5 13.5z"
+													class="color262626 svgShape"></path>
+												<path
+													d="M33.2 199.7c1.2 1.5 1 3.9.1 5.7-1.9 3.6-6.4 3.1-6.8 5.2-.4 2.1-2.7 5.6-5.4 6-2 .3-3.2-.3-4.2-1.2.2 1.8 1 3.6 3.8 3.6 4 0 5.9-2.9 6.2-3.8.3-1-.1-3 1.3-3.8 1.3-.8 6.3-2.5 6.6-7.1.2-2.9-.6-4.1-1.6-4.6z"
+													opacity=".5" fill="#000000" class="color000 svgShape"></path>
+												<path fill="#5a4e4e"
+													d="M16.2 125.3c-.3 6 1.4 21.3 1.2 32.8-.2 11.5-2.8 43.8-2.5 47.6s-.3 8.8 3.8 9.6c3.2.6 7.4-1.8 9-4.3 1.6-2.5 2.6-6.2 2.7-10.5.1-4.3 9.4-58.4 9.5-60.6.1-2.2-1-13.8-1-13.8l-22.7-.8z"
+													class="color656565 svgShape"></path>
+												<path
+													d="M16.2 125.3c-.3 6 1.4 21.3 1.2 32.8-.2 11.5-2.8 43.8-2.5 47.6s-.3 8.8 3.8 9.6c3.2.6 7.4-1.8 9-4.3 1.6-2.5 2.6-6.2 2.7-10.5.1-4.3 9.4-58.4 9.5-60.6.1-2.2-1-13.8-1-13.8l-22.7-.8z"
+													opacity=".3" fill="#000000" class="color000 svgShape"></path>
+												<path fill="#fbd7c7"
+													d="M45.1 27.4c2.5 1 4.3 3.8 4.7 10.3.4 6.5 0 11.6-1.5 12.3-1.5.7-2.5.4-2.5.4l1.1 7.1-16.8-4.7s.3-3.9-.6-6.4c-.9-2.4-3.5-11.2-.8-15.2s8.4-6.9 16.4-3.8zM5.4 113.6s-.8 7-.5 8.7c.3 1.7 3.5 9.6 5.3 10 1.8.4 3.6-1 3.4-2.3-.2-1.2-2-3.3-2.1-5.4-.2-2.1-.1-5.3.8-5.7.9-.5 2.9 2 3.8 3.1.9 1.1 2.5.7 2.5-.2 0-.8-1.9-2.6-2.3-4.1-.4-1.5-1.2-2.7-2.3-4-1.1-1.4-1.5-2.3-1.5-2.3l-7.1 2.2z"
+													class="colorFBD7C7 svgShape"></path>
+												<path fill="#ffffff" d="M4.2 111.5s-.6 3.1.5 3.8c.9.5 4.5 1.2 6.8.3 2-.8 3.1-1.5 3.2-2.2.1-.7-.8-2-.8-2l-9.7.1z"
+													class="colorFFF svgShape"></path>
+												<path fill="#2a2626"
+													d="M43.9 224v4.1c0 .8.1 2.9 4.3 2.6s6.4-1.2 6.6-1.5.7-1.1.7-1.1 7.2.6 12.4-1.6c5.4-2.3 8.6-7.3 4-9.4-2.8-1.3-4.4.3-8.6-.2-4.5-.5-7.1-2.7-7.1-2.7L43.9 224z"
+													class="color262626 svgShape"></path>
+												<path
+													d="M68 226.3c5.4-2.3 8.6-7.3 4-9.4 4.8 4.5-4.5 8.7-8.6 9-2.7.2-8.6.5-12.4 1.3-3.1.6-6.2.4-7.1-.8v1.7c0 .8.1 2.9 4.3 2.6 4.3-.3 6.4-1.2 6.6-1.5.2-.3.7-1.1.7-1.1s7.3.4 12.5-1.8z"
+													opacity=".5" fill="#000000" class="color000 svgShape"></path>
+												<path fill="#5a4e4e"
+													d="M33.3 128.3c-.4 6.2 2.3 19.4 3.4 26.8s2.9 38.7 3.7 46.5c.6 6.3 2.7 23.4 3.9 24.3 1.2.9 9.6-.3 13.1-2.6 2.3-1.6 4.9-4.7 4.5-6.8-.4-2.1-3.1-4.1-3.5-14.9-.3-10.8.9-30.2.6-44.9-.3-14.8-1-31.5-1-31.5l-24.7 3.1z"
+													class="color656565 svgShape"></path>
+												<path
+													d="M33.3 128.3c-.4 6.2 2.3 19.4 3.4 26.8s2.9 38.7 3.7 46.5c.6 6.3 2.7 23.4 3.9 24.3 1.2.9 9.6-.3 13.1-2.6 2.3-1.6 4.9-4.7 4.5-6.8-.4-2.1-3.1-4.1-3.5-14.9-.3-10.8.9-30.2.6-44.9-.3-14.8-1-31.5-1-31.5l-24.7 3.1z"
+													opacity=".15" fill="#000000" class="color000 svgShape"></path>
+												<path fill="#5a4e4e"
+													d="M12.6 55.9c-1.2 1.4-2 5.5-2.3 7.6-.3 2.1-5.8 19.4-6.7 22.7-.9 3.4-.8 9.1-.6 14.4.2 5.3.2 11.7.3 12.6.1 1 4 2 6.9 1.6 2.9-.4 4.6-1.2 4.9-3.6s1.8-13.9 3.8-18.1c2-4.2 4.9-11.7 4.9-11.7L12.6 55.9z"
+													class="color656565 svgShape"></path>
+												<path
+													d="M12.6 55.9c-1.2 1.4-2 5.5-2.3 7.6-.3 2.1-5.8 19.4-6.7 22.7-.9 3.4-.8 9.1-.6 14.4.2 5.3.2 11.7.3 12.6.1 1 4 2 6.9 1.6 2.9-.4 4.6-1.2 4.9-3.6s1.8-13.9 3.8-18.1c2-4.2 4.9-11.7 4.9-11.7L12.6 55.9z"
+													opacity=".15" fill="#000000" class="color000 svgShape"></path>
+												<path fill="#fbd7c7"
+													d="M65.7 103.2l.1 8.8s4.1 1.1 7.1-.5 5.2-4.7 5.2-5.8c0-1.1-.3-2.4-1.3-2.4-1.1 0-2 1.6-3.2.3s-.4-2.2.6-2.9c.9-.7 1.3-2.5-.8-2.3-1 .1-1.9.8-2.5 1.3-.9.8-1.8 1.8-3 2.8-1.3 1.2-2.2.7-2.2.7z"
+													class="colorFBD7C7 svgShape"></path>
+												<path fill="#5a4e4e"
+													d="M30.2 49.3l-3.6.8.1.9s-5.5-.7-9.4 1.4c-4 2.1-6.1 4-5.6 7.3.6 3.4 3.9 15.1 6.1 21.1 2.2 6 3.5 9.3 2.9 14.2s-7.1 27.7-6.7 31.2 5.8 6.1 12.5 7.9c6.9 1.8 31.9 3.2 32.4-1.9.5-5 .5-18.9.5-18.9s7.1 1.3 8.4-.4c1.3-1.7 2.8-4.5 1.2-7.9-1.5-3.4-2.1-3.5-3.1-3.8s-5.5-1-6.8-2.7c-1.3-1.6-.3-7.8-.3-15.7s.3-13.6-3.2-17.3c-3.5-3.7-7.5-8.9-10.8-10.1-4.4-1.4-15.3-1.1-14.6-6.1z"
+													class="color656565 svgShape"></path>
+												<path d="M27.5 49.9s.1 5.2 7.4 6.1c6.9.9 19 8.5 19 8.5s-13-7.3-18.9-7.8c-8.8-.7-8.4-6.8-8.4-6.8h.9z"
+													opacity=".2" fill="#000000" class="color000 svgShape"></path>
+												<path fill="#252831"
+													d="M43.7 42.8c.1.8 1-1.3 1.7-3.1.7-1.9 2-4.3 2.7-7 .7-2.7 1.3-1.7 1.4-2.9s-5.7-8.9-16.3-5.2S25 40.6 26 44c1 3.4 4.1 7.3 7.1 7.3 3-.1 6.5-2.4 6.8-6.8.4-4.4 3.6-3.5 3.8-1.7z"
+													class="color762C07 svgShape"></path>
 											</g>
-											<path class="st44" d="M157.7,374.3c0,0-2.5,0.5-2.5-0.2c0-0.7,1.7-10.1,1.7-11.1C156.9,362,157.7,372.5,157.7,374.3z"/>
-											<path class="st45" d="M195.9,348.1c0-0.1-1.8-3.5-2.5-3c-0.8,0.5,0.5,2.9,1.3,3.4C195.4,349.1,195.8,348.3,195.9,348.1z"/>
-										</g><!--  남자end -->
+										<!--  남자end -->
 									
 								</g>
 								<g class="stty2">
