--- a/index.html
+++ b/index.html
@@ -1368,7 +1368,7 @@
 									</g>
 								</g>
 								<g>
-										<g id="SvgjsG1024" transform="matrix(0.7,0,0,0.7,122,330)">
+										<g id="work-man" transform="matrix(0.7,0,0,0.7,122,330)">
 												<path
 													d="M68.8 230C86 220.3 73 213 57 205.3c-17.8-8.5-24.9-11.7-40.5-1.6-9.5 6.1-2.4 15.9 13.8 23.5 18.4 8.7 26.3 9.6 38.5 2.8z"
 													opacity=".2" fill="#000000" class="color000 svgShape"></path>
@@ -5369,50 +5369,32 @@
 									</g>
 								</g>
 							</g>
-							<!-- 5시 남사원 -->
-							<g class="sttt">
-								<g transform="translate(-120 -150)">
-									<!-- 남자3 -->
-									<path class="st4" d="M199.5,359.4c0,0-0.1-6.6-0.1-10c0-0.6,0.7-2.9,0.7-3.1c0.3-1.9-0.1-5.2-2.8-4.3c-2.7,0.9-2.8,3.7-2.8,6
-										c0,0.4,0.7,1.6,0.7,2.2c0,3.2-0.6,8.4-0.6,8.9C194.7,359.6,199.5,359.4,199.5,359.4z"></path>
-									<path class="st37" d="M162.3,459.6c0,0,1.6,2.3,1.5,2.4c-0.2,0.1-2.9,3.2-4.7,2.8c-1.8-0.4-1.7-2.2-1.7-2.2l0.8-4L162.3,459.6z
-																" />
-									<path class="st37" d="M175.6,466.5c0,0-0.3,1.6,2.2,3c0.8,0.4-2.2,3.7-3.7,3.7c-2.1,0-3.7-0.9-3.7-1.9c-0.1-1-0.8-6.9,0.5-6.8
-																C172.1,464.6,175.2,466.2,175.6,466.5z" />
-									<path class="st38" d="M177.4,469.2c0,0,11-1.6,11.6,0.1c0.6,1.7-2.9,4.8-5.6,5.4c-2.7,0.5-6.3,0.8-7.2,1.4
-																c-0.9,0.7-5,3.3-6,0.4v-5.4c0,0,2.8,2.4,5,1.3C177.5,471.3,177.5,470.9,177.4,469.2z" />
-									<path class="st39"
-										d="M183.1,406.9c0,0-0.9,27.2-1.6,30.1c-0.8,2.9-5.5,28.6-5.9,29.4c-0.4,0.8-4.5,2.2-5.5-1.1
-																c-0.9-3.2,2.7-28.2,2.7-28.2s-1.1-18.5-2.3-20.7c-1.2-2.2-2.9-2.8-2.9-0.4c0,2.5,0.7,15.5-0.1,18.2c-0.8,2.6-3.9,25.3-5.1,26
-																c-1.2,0.8-4,2.3-5.9-1.4c-2-3.7,2.5-22,2.2-27.1c-0.3-5.1-3.7-29.6-2.7-34.4C157,392.5,183.2,405.3,183.1,406.9z" />
-									<path class="st38" d="M163.2,458.2c2-0.8,5.5-3.5,6.3-2.1c0.8,1.4,0.9,3.8-2.4,5.5c-3.3,1.7-3.5,2.5-3.9,3.6
-																c-0.4,1.1-1.9,4.2-4.3,3.3c-2.4-0.9-1.7-4.8-1.5-5.9c0,0,1.1,1.9,2.7,1.3c1.6-0.6,2.4-1,2.7-1.8c0.2-0.8-0.8-2.1-0.8-2.1
-																L163.2,458.2z" />
-									<path class="st4"
-										d="M184,338.5c0.9,0.4,1.3,7.2,1.2,8.7c-0.2,1.4,0.2,2.5-0.2,2.4c-0.4-0.1-0.7,0.2-0.7,0.2s0.7,6.1-0.2,6.7
-																c-0.9,0.6-6.2-0.4-7.6-0.4c-0.8,0-1.7,1.1-1.7,1.6c0,1-5.3-2.1-5.3-3c0-0.8,1.1-4.9,1.1-4.9S178.8,336.1,184,338.5z" />
-									<path class="st40" d="M184.9,337.3c0.2-3.6-3.2-4.1-5.9-3.7c-2.6,0.5-12.2-1.2-13.5,5.9c-1.3,7.1,1,10.6,3.8,11.9
-																c1.9,0.9,6.5-1.3,6.5-3.5s2.8-2.2,3.5-1.1c0.7,1.2,2.2,3.9,2.5,1.2c0.2-2.7-1.6-7.2-0.2-8.8
-																C183.1,337.6,184.8,339.5,184.9,337.3z" />
-									<g>
-										<path class="st41" d="M164.9,354.1c0.1,0,0.2-0.1,0.3-0.2c1.7-1.3,4.2-0.4,4.2-0.4c0.6,0.2,2.4,1.8,5.2,3.7
-																c1,0.7,2.6,1.9,4.3,3.2c-3.4-0.2-10.1-0.7-11.8-2.1C165.6,357.3,165.1,355.6,164.9,354.1z" />
-										<path class="st42" d="M150.1,376c-2.1-1.7,7-20.5,9.4-21.8c2.2-1.2,3.9,0.5,5.4,0c0.2,1.5,0.8,3.2,2.1,4.3
-																c1.8,1.4,8.4,2,11.8,2.1c3.1,2.5,6.4,5.3,6.4,5.3s-0.2-0.2-0.5-0.6c3.8,4.1,12.2,11.6,16.3,15.3c0.1,0.2,0.1,0.3,0.1,0.4
-																c0.9,3.6-1.2,4.5-3.1,4.6c-13.7-11.1-15.8-12.6-15.8-12.6c-1.6,2-1.3,13.6-1.5,17.9c-0.2,3.3,0.7,11.4,2.5,16.1
-																c-1.5,1-3.9,2-5.9,2c-3,0-11.9-4.7-12.5-5.6c-0.5-0.9-0.2-9.9-1-9.8c-0.8,0.1-2,7.6-2,7.6s-8.2-2.7-6.2-7.4
-																c1.9-4.7,1.8-15,1.8-15S152.2,377.7,150.1,376z" />
-										<path class="st42" d="M180.7,390.8c0.2-4.3-0.1-15.9,1.5-17.9c0,0,2.1,1.5,15.8,12.6c-0.4,0-0.9,0-1.2,0
-																c-2-0.2-13.2-10.3-13.2-10.3c-0.8,0.8-0.6,13.1-0.6,15.6c0,2.5,1.5,14.2,1.5,14.9c0,0.3-0.5,0.8-1.4,1.3
-																C181.4,402.2,180.5,394.1,180.7,390.8z" />
-										<path class="st43" d="M194.5,365c-0.2-4.9-0.4-8.3,0-9.7c0.3-0.9,3.5-0.4,4.9-0.2c1.3,0.2,1.6,20.5,1.6,25.3
-																c-2.6-2.2-4.1-3.6-6.3-5.7C193.8,374,194.5,370.7,194.5,365z" />
-										<path class="st44" d="M157.7,374.3c0,0-2.5,0.5-2.5-0.2c0-0.7,1.7-10.1,1.7-11.1C156.9,362,157.7,372.5,157.7,374.3z" />
-										<path class="st45" d="M195.9,348.1c0-0.1-1.8-3.5-2.5-3c-0.8,0.5,0.5,2.9,1.3,3.4C195.4,349.1,195.8,348.3,195.9,348.1z"/>
-									</g>
-									
-							</g> <!--남자1시 종료-->
-							<g class=c>
+							<!-- 5시 강아지 -->
+							<g id="dog" transform="matrix(0.7,0,0,0.7,-15,170)">
+
+									<path
+										d="M50.2 144.4c17.4 10.5 30 3.9 49-4.4 21-9.2 32.5-23.8 22.2-29.9s-27.1-1.4-45 5.9c-16.6 6.7-37.3 21.7-26.2 28.4z"
+										opacity=".2" fill="#f2b5b5" class="color000 svgShape"></path>
+									<path fill="#db9c54"
+										d="M87.8 101.1c.6 2.7-.1 7.5-.6 9.2-.9 3.2-1 5.9.1 7 1.7 1.8 4.6 1.8 6.6 1.2s3.5-2.8 2.4-4.3c-1-1.6-2.8-1.8-2.8-1.8s.5-2.1 1-4.8c.6-3.1.3-7 .3-7l-7 .5zM67.8 103.4c-.8 4.2-3.2 9.2-5.9 12.8-2.7 3.5-4.2 5.4-4.8 7.5-.5 1.8-1.4 7.9-.7 8.5.7.6 2.8.4 3.5 3.5.4 1.9-3.1 3.7-5.6 3.4-2.6-.2-5.1-1.5-4.8-5.8s4.2-31.9 4.2-31.9l9.8-2.4 4.3 4.4z"
+										class="color825012 svgShape"></path>
+									<path
+										d="M87.8 101.1c.6 2.7-.1 7.5-.6 9.2-.9 3.2-1 5.9.1 7 1.7 1.8 4.6 1.8 6.6 1.2s3.5-2.8 2.4-4.3c-1-1.6-2.8-1.8-2.8-1.8s.5-2.1 1-4.8c.6-3.1.3-7 .3-7l-7 .5zM67.8 103.4c-.8 4.2-3.2 9.2-5.9 12.8-2.7 3.5-4.2 5.4-4.8 7.5-.5 1.8-1.4 7.9-.7 8.5.7.6 2.8.4 3.5 3.5.4 1.9-3.1 3.7-5.6 3.4-2.6-.2-5.1-1.5-4.8-5.8s4.2-31.9 4.2-31.9l9.8-2.4 4.3 4.4z"
+										opacity=".2" fill="#f2b5b5" class="color000 svgShape"></path>
+									<path fill="#db9c54"
+										d="M126 39s4.6-3.9 5-8.5c.3-3.7-.1-6.3-1-7-.9-.7-3.2-1.3-5.7.1-2.4 1.4-3.6 2.3-4.3 2.1s-1.2-2.4-4-1.6c-2.8.9-4.7 1.7-6.1 1.6s-3-1.2-5.6 1.2-6.5 7.2-6.5 9.1 3.7 3.5 3.7 5.1c.1 1.6-2.6 9.4-8.3 16.9-5.9 7.6-7.9 10.5-16 13.2-8.1 2.8-16.7 5.9-20.7 12.7-4 6.8-3.8 11.3-4.3 14.9-1.3 9.2-4.7 18.2-10 26.2-1.5 2.3-2.6 6 2.1 2.3s8.1-10.1 8.8-11.7c.7-1.6 6.7-13.5 9.4-13 2.8.6 6.5 6.7 7 10.6s.1 9.5-1.2 12.3c-1.6 3.5-2.9 8.2-2.9 12.3s.7 7.2 2.4 8.7c2.4 2 6.7.9 8.1-.2 1.5-1.1 1.1-3.7-.7-4.7-1.2-.7-2.5-.9-2.8-1.8-.3-1 .1-5.9 2-9.3 1.7-2.9 7.5-12.1 9.9-19.1 2.4-7 2.6-8.8 2.6-8.8s7.7-.1 11.6-2.4c4.5-2.8 6.7-7.1 8.3-6.1s2.2 13.9 1.5 19.8c-.5 3.7-4.1 7.2-2.1 11 1.2 2.3 5.4 2.8 7.9 1.8 2.5-1 2.6-3.3 1.8-4.3s-3.2-1.7-3.2-2c0-.4 1.6-2.7 2.2-5.3 1.3-5.7 1.7-16.1 4.2-22.8 2.6-6.7 4.3-15.7 3.9-21.2-.5-5.4-2.8-5.7-2.4-11.8.4-6.1 2.5-10.7 2.5-10.7s1.4.1 2.2-.2c1.3-.6.7-9.4.7-9.4z"
+										class="color825012 svgShape"></path>
+									<path fill="#998272"
+										d="M125.9 23c1.6 0 4.5 1.6 5.1 3.5 1.8-1-.7-7.5-5.1-3.5zM125.2 29c.2 1.1-.3 3.4-.3 3.4s1-1.3 1-2.3-.7-1.1-.7-1.1z"
+										class="color262626 svgShape"></path>
+									<path
+										d="M102.8 37.5s-1.1.3-2.3.1c-1-.1-1.9-.7-2.6-1.2.4 1.7 3.6 3.2 3.7 4.7.6-1.9 1.2-3.6 1.2-3.6zM115.9 43.1c2.8 4.5 6.6 6.2 9.4 5.3.1 0-5-.5-9.4-5.3z"
+										opacity=".2" fill="#f2b5b5" class="color000 svgShape"></path>
+									<path fill="#998272"
+										d="M98.8 48s6 2.8 11.6 3.9C116.5 53 122 53 122 53l-.9 4s-3.7.7-11.3-.7c-6.2-1.1-13-4.1-13-4.1l2-4.2z"
+										class="color262626 svgShape"></path>
+								</g>
+<!--강아지 종료-->		<g class=c>
 								<g>
 									<polygon class="st96" points="236.2,249.1 196.1,225.8 216.5,234.7 256.6,258.1 				"/>
 								</g>
