--- a/html/sub4.html
+++ b/html/sub4.html
@@ -464,28 +464,36 @@
 	
 	<div id="menu2">
 		<div class="menupage">
-			<div class="left-menu">
-				<ul>
-					<li class="menu-tit">&diams; CONTACT &diams;</li>
-					<li class="menu-sub3">cfpjeffrey@gmail.com</li>
-				</ul>
+		  <div class="#">
+			  <!-- 구 'left-menu' -->
+		  </div>
+		  <div class="right-menu">
+			  <ul>
+				  <li class="menu-tit">&diams; NAVIGATION &diams;</li>
+				  <li class="menu-sub"><a href="html/sub2.html">About Jeffrey</a></li>
+			  </ul>
+			  <div class="pdf">
+				<a href="../html/assets/img/portfolio_jp.pdf">
+					  <p> VIEW PORTFOLIO (PDF) ></p>
+				  </a>
+			  </div>
+			  <br/>
+			  <br/>
+			  <ul>
+				  <li class="menu-tit">&diams; CONTACT &diams;</li>
+				  <li class="menu-sub3">cfpjeffrey@gmail.com</li>
+			  </ul>
+			  <br/>
+			  <br/>
+			  <ul>
+				  <li class="menu-tit2">&diams; ON-AIR Portfolio &diams;</li>
+				  <li class="menu-sub2"><a href="http://52.231.206.1:8080/second/" target="_blank">> Second Market</a></li>
+			  </ul>
 
-				<div class="pdf">
-					<a href="assets/img/portfolio_jp.pdf">
-						<p> VIEW PORTFOLIO (PDF) ></p>
-					</a>
-				</div>
-			</div>
-			<div class="right-menu">
-				<ul>
-					<li class="menu-tit">&diams; NAVIGATION &diams;</li>
-					<li class="menu-sub"><a href="./sub4.html">Portfolio</a></li>
-					<li class="menu-sub"><a href="./sub2.html">About Me</a></li>
-					<li class="menu-sub"><a href="./sub3.html">Contact</a></li>
-				</ul>
-			</div>
+			  
+		  </div>
 		</div>
-	</div>
+	  </div>
 </div>
 
 	
