--- a/html/sub2.html
+++ b/html/sub2.html
@@ -114,7 +114,7 @@
 				<span class="about-title">About Me</span>
 				<div class="about-me">
 					<h2> 함께 일하고 싶은 개발자 </h2>
-					<p> 웹 어플리케이션 개발자가 되기 위해 개발자과정을 수료했습니다. <br/> 아울러 도서, 구글링, Youtube 등의 도구를 활용해 개발자 역량을 높이고 발전하고 있습니다.<br/>
+					<p> 웹 어플리케이션 개발자가 되기 위해 개발자과정을 수료했습니다. <br/> 아울러 도서ㆍ GoogleㆍYoutube 등을 활용해 개발 역량을 키우고 있습니다.<br/>
 						이후로도 꾸준히 학습하고, '함께 일하고 싶은 개발자'로 동료들에게 신뢰를 주고 싶습니다.</p>
 				</div>
 				<br>
