--- a/index.html
+++ b/index.html
@@ -5546,7 +5546,7 @@
 				</ul>
 				<div class="pdf">
 					<a href="html/assets/img/portfolio_jp.pdf">
-						<p> VIEW PORTFOLIO (PDF) ></p>
+						<p> VIEW PORTFOLIO (PDF) </p>
 					</a>
 				</div>
 				<br/>
