--- a/html/sub3.html
+++ b/html/sub3.html
@@ -74,9 +74,9 @@
     
 		<div class="sub-main">
 			
-			<span class="contact-title">&diams; CONTACT &diams;</span>
+			<span class="contact-title">◆ CONTACT ◆</span>
       		<br>
-			<svg style="max-width:50px; max-height:50px; transform:translate3d(-10%, 35%,0)"  version="1.1" id="mail-icon1"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+			<svg style="max-width:50px; max-height:50px; transform:translate3d(-10%,35%,0)"  version="1.1" id="mail-icon1"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
 				viewBox="0 0 64 64" version="1.1" >
 				<title>mail</title>
 				<defs>
