--- a/html/sub3.html
+++ b/html/sub3.html
@@ -153,16 +153,21 @@
 					  <br/>
 					  <br/>
 					  <ul>
-						  <li class="menu-tit">&diams; CONTACT &diams;</li>
-						  <li class="menu-sub3">cfpjeffrey@gmail.com</li>
-					  </ul>
-					  <br/>
-					  <br/>
-					  <ul>
-						  <li class="menu-tit2">&diams; ON-AIR Portfolio &diams;</li>
-						  <li class="menu-sub2"><a href="http://52.231.206.1:8080/second/" target="_blank">> Second Market</a></li>
-					  </ul>
-					  <div class="pdf">
+						<li class="menu-tit">&diams; CONTACT &diams;</li>
+						<li class="menu-sub3">cfpjeffrey@gmail.com</li>
+					</ul>
+					<br/>
+					<br/>
+					<ul>
+						<li class="menu-tit2">&diams; ON-AIR Portfolio &diams;</li>
+						<li class="menu-tit3">[Finish]</li>
+						<li class="menu-sub2"><a href="http://52.231.206.1:8080/second/" target="_blank">ㆍSecond Market</a></li>
+						<li class="menu-tit3">&nbsp;</li>
+						<li class="menu-tit3">[Work in Progress]</li>
+						<li class="menu-sub2"><a href="http://52.231.206.1:8080/animalForest/main.do" target="_blank">ㆍ동숲 - 구현 작업중</a></li>
+					</ul>
+					<br/>
+					<div class="pdf">
 						<a href="../html/assets/img/portfolio_jp.pdf">
 							<p> VIEW PORTFOLIO (PDF) </p>
 						</a>
