--- a/html/sub3.html
+++ b/html/sub3.html
@@ -75,57 +75,26 @@
 		<div class="sub-main">
 			
 			<span class="contact-title">◆ CONTACT ◆</span>
-      		<br>
-			<svg style="max-width:50px; max-height:50px; transform:translate3d(-10%,35%,0)"  version="1.1" id="mail-icon1"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
-				viewBox="0 0 64 64" version="1.1" >
-				<title>mail</title>
-				<defs>
-					<path id="path-1" d="M.06 64V.04H64V64z" />
-				</defs>
-				<g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-					<g id="mail">
-						<g id="Group-3">
-							<mask id="mask-2" fill="#fff">
-								<use xlink:href="#path-1" />
-							</mask>
-							<path
-								d="M64 32c0 17.673-14.327 32-32 32C14.327 64 0 49.673 0 32 0 14.327 14.327 0 32 0c17.673 0 32 14.327 32 32"
-								id="Fill-1" fill="#76ABC4" mask="url(#mask-2)" />
-						</g>
-						<path d="M48 48H16a4 4 0 0 1-4-4V24v18a4 4 0 0 0 3.97 4H48.03A4 4 0 0 0 52 42v2a4 4 0 0 1-4 4" id="Fill-4"
-							fill="#638DA0" />
-						<path d="M52 42a4 4 0 0 1-4 4H16a4 4 0 0 1-4-4V22a4 4 0 0 1 4-4h32a4 4 0 0 1 4 4v20" id="Fill-5"
-							fill="#DEDECA" />
-						<path
-							d="M51.328 43.96a5.169 5.169 0 0 0-.378-.414L36.662 32.852 37.671 32 50.95 43.228c.18.199.328.393.461.585a6.972 6.972 0 0 1-.083.147m-38.656 0a6.972 6.972 0 0 1-.083-.147c.133-.192.281-.386.461-.585l13.295-11.241 1.001.859-14.296 10.7a5.169 5.169 0 0 0-.378.414"
-							id="Fill-6" fill="#B3B2A4" />
-						<path
-							d="M35.524 32c-1.938-1.9-5.11-1.9-7.048 0L13.05 43.546c-.18.176-.328.348-.461.518A3.985 3.985 0 0 0 16 46h32c1.451 0 2.709-.78 3.411-1.936a5.148 5.148 0 0 0-.461-.518L35.524 32"
-							id="Fill-7" fill="#DEDECA" />
-						<path d="M15.995 18H16h-.005m32.01 0H48h.005" id="Fill-8" fill="#638DA0" />
-						<path
-							d="M37.671 32l-2.147-1.815c-.969-1.073-2.247-1.61-3.524-1.61-1.277 0-2.555.537-3.524 1.61l-2.131 1.802-13.756-11.799c.701-1.305 1.957-2.186 3.406-2.188H48.005c1.449.002 2.705.883 3.406 2.188a5.777 5.777 0 0 1-.461.584L37.671 32"
-							id="Fill-9" fill="#B3B2A4" />
-						<path
-							d="M36.662 32.852L35.524 32A5.02 5.02 0 0 0 32 30.575 5.02 5.02 0 0 0 28.476 32l-1.13.846-1.001-.859 2.131-1.802c.969-1.073 2.247-1.61 3.524-1.61 1.277 0 2.555.537 3.524 1.61L37.671 32l-1.009.852"
-							id="Fill-10" fill="#939388" />
-						<path
-							d="M32 35.425c-1.277 0-2.555-.537-3.524-1.61l-1.13-.969 1.13-.846A5.02 5.02 0 0 1 32 30.575 5.02 5.02 0 0 1 35.524 32l1.138.852-1.138.963c-.969 1.073-2.247 1.61-3.524 1.61"
-							id="Fill-11" fill="#B3B2A4" />
-						<path
-							d="M28.476 32c1.938 1.9 5.11 1.9 7.048 0L50.95 20.454c.18-.176.328-.348.461-.518A3.986 3.986 0 0 0 48 18H16c-1.451 0-2.71.78-3.411 1.936.133.17.281.342.461.518L28.476 32"
-							id="Fill-12" fill="#FFFFFE" />
-					</g>
-				</g>
-			</svg>
-	<span class="e-mail">cfpjeffrey@gmail.com 
-	</span>
+		
+			  
+			<div id=Profile-img>
+			<br>
+				<img src="../html/assets/img/jeffrey_simson.png" width="100px"; height="110px" >
+			</div>
+
+			<p id=mail>
+				<img src="../html/assets/img/mail.png" style=margin-bottom:-20px ;width="50px"; height="50px" >
+				<span class="e-mail">cfpjeffrey@gmail.com 
+				</span>
+			</p>
+			
+			<p id=phone>
+				<img src="../html/assets/img/phone.png"  style=margin-bottom:-20px ;width="50px"; height="50px" >
+				<span class="phone-number">010 3*** 9295 
+				</span>
+			</p>
 	
-	<div class="pdf">
-		<a href="../html/assets/img/portfolio_jp.pdf">
-			<p> VIEW PORTFOLIO (PDF) </p>
-		</a>
-	</div>
+
 	</div>
 	
 	<div class="nav-logo">
