--- a/index.html
+++ b/index.html
@@ -5557,15 +5557,19 @@
 				<ul>
 					<li class="menu-tit2">&diams; ON-AIR Portfolio &diams;</li>
 					<li class="menu-tit3">[Finish]</li>
-					<li class="menu-sub2"><a href="http://52.231.206.1:8080/second/" target="_blank">ㆍSecond Market</a></li>
+					<li class="menu-sub2"><a href="http://52.231.206.1:8080/second/" target="_blank">ㆍP1-Second Market</a></li>
+					<div class="pdf">
+						<a href="../html/assets/img/portfolio_p1_jp.pdf">
+							<p> PORTFOLIO P1 (PDF) </p>
+						</a>
+					</div>
 					<li class="menu-tit3">&nbsp;</li>
 					<li class="menu-tit3">[Work in Progress]</li>
-					<li class="menu-sub2"><a href="http://52.231.206.1:8080/animalForest/main.do" target="_blank">ㆍ동숲 - Open Beta </a></li>
+					<li class="menu-sub2"><a href="http://52.231.206.1:8080/animalForest/main.do" target="_blank">ㆍP2-Animal Forest </a></li>
 				</ul>
-				<br/>
 				<div class="pdf">
-					<a href="../html/assets/img/portfolio_jp.pdf">
-						<p> VIEW PORTFOLIO (PDF) </p>
+					<a href="../html/assets/img/portfolio_p2_jp.pdf">
+						<p> PORTFOLIO P2 (PDF) </p>
 					</a>
 				</div>
 				
