--- a/index.html
+++ b/index.html
@@ -5355,7 +5355,7 @@
 
 				</svg></a>
 				<div class="tit2">
-					<h2>ABOUT</h2>
+					<h2>ABOUT ME</h2>
 					<h3>Detail information</h3>
 				</div>
 			<button class="no-hover">VIEW</button>
