--- a/html/sub2.html
+++ b/html/sub2.html
@@ -56,7 +56,7 @@
 					<br/>
 					<ul>
 						<li class="menu-tit">&diams; CONTACT &diams;</li>
-						<li class="menu-sub3">cfpjeffrey@gmail.com</li>
+						<li class="menu-sub3">jeffrey0208@naver.com</li>
 					</ul>
 					<br/>
 					<br/>
