--- a/html/sub3.html
+++ b/html/sub3.html
@@ -84,7 +84,7 @@
 
 			<p id=mail>
 				<img src="../html/assets/img/mail.png"style=margin-bottom:-20px; width="50px"; height="50px" >
-				<span class="e-mail">cfpjeffrey@gmail.com 
+				<span class="e-mail">jeffrey0208@naver.com 
 				</span>
 			</p>
 			
@@ -123,7 +123,7 @@
 					<br/>
 					<ul>
 						<li class="menu-tit">&diams; CONTACT &diams;</li>
-						<li class="menu-sub3">cfpjeffrey@gmail.com</li>
+						<li class="menu-sub3">jeffrey0208@naver.com</li>
 					</ul>
 					<br/>
 					<br/>
