--- a/index.html
+++ b/index.html
@@ -5550,7 +5550,7 @@
 				<br/>
 				<ul>
 					<li class="menu-tit">&diams; CONTACT &diams;</li>
-					<li class="menu-sub3">jeffrey0208@naver.com</li>
+					<li class="menu-sub3">Jeffrey0208@naver.com</li>
 				</ul>
 				<br/>
 				<br/>
